[package]
name = "incomeapp"
version = "0.1.0"
authors = ["Nilesh Suthar <nd28@github.com>"]
edition = "2021"
build = "build.rs"
description = "Diving up income into tax, owner, profit, and opex amounts."

[package.metadata.bundle]
name = "Income Devider"
identifier = "io.github.nd28.income-divider-desktop"
description = "Diving up income into tax, owner, profit, and opex amounts."
icon = ["./icon.png", "./icon@2x.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"